# WDProject

./: CMakeLists.txt  main.cpp
Study/: KMP_next.cpp  test.cpp
WDWork/: w1d2.cpp  w2d4.cpp  w2d5.cpp  w2d6.cpp  w3d8.cpp  w4d10.cpp
WDWork_Middle/: d1.cpp  d2.cpp
WDWork_Primary/: w1d3.cpp  w2d5.cpp  w3d7_1.cpp  w3d7_2.cpp  w3d9.cpp  w4d11.cpp  w4d12.cpp
