cmake_minimum_required(VERSION 3.21)
project(WDProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(WDProject main.cpp)

add_executable(w1d2 WDWork/w1d2.cpp)
add_executable(w1d3 WDWork/w1d3.cpp)
add_executable(w2d4 WDWork/w2d4.cpp)
add_executable(w2d5 WDWork/w2d5.cpp)
add_executable(KMP_next Study/KMP_next.cpp)
add_executable(w2d6 WDWork/w2d6.cpp)
add_executable(w3d7_1 WDWork/w3d7_1.cpp)
add_executable(w3d7_2 WDWork/w3d7_2.cpp)
add_executable(w3d8 WDWork/w3d8.cpp)
add_executable(w3d9 WDWork/w3d9.cpp)
add_executable(w4d10 WDWork/w4d10.cpp)