cmake_minimum_required(VERSION 3.21)
project(WDProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(WDProject main.cpp)

add_executable(w1d2 WDWork_Primary/w1d2.cpp)
add_executable(w1d3 WDWork_Primary/w1d3.cpp)
add_executable(w2d4 WDWork_Primary/w2d4.cpp)
add_executable(w2d5 WDWork_Primary/w2d5.cpp)
add_executable(KMP_next Study/KMP_next.cpp)
add_executable(w2d6 WDWork_Primary/w2d6.cpp)
add_executable(w3d7_1 WDWork_Primary/w3d7_1.cpp)
add_executable(w3d7_2 WDWork_Primary/w3d7_2.cpp)
add_executable(w3d8 WDWork_Primary/w3d8.cpp)
add_executable(w3d9 WDWork_Primary/w3d9.cpp)
add_executable(w4d10 WDWork_Primary/w4d10.cpp)
add_executable(w4d11 WDWork_Primary/w4d11.cpp)
add_executable(w4d12 WDWork_Primary/w4d12.cpp)
add_executable(test Study/test.cpp)
add_executable(d1 WDWork_Middle/d1.cpp)